atualizado doc swagger
